liu light update

--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -60,6 +60,11 @@
      <img class="titlelogo" src="Zhengluoyu-huayu.gif">
      </div>
      </div>
+     <div class="column">
+     <div class="content">
+     <img class="titlelogo" src="liulight-flower.gif">
+     </div>
+     </div>
   </div>
 
      <br><br><br><br><br>
