--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
       <a href="ChinoAmobi-html/index.html">
       <img src="chino-motion.gif" style="width:100%">
       <h3>友情 EROICA | CHINO AMOBI</h3>
-      <p class="chinese">Chino Amobi 是一名多媒体艺术家，他将艺术、绘画、设计、音乐、写作、丰富电影的风格和声音组合在一起。Chino Amobi是独立唱片公司NON Worldwide的联合创始人，也是EROICA的创意总监。2016年，他发行了EP《Airport Music For Black Folk》，2017年发行了首张专辑《Paradiso》，广受好评。他在VCU获得视觉传达MFA学位。
-      Chino Amobi在VCU也获得了绘画和版画的BFA学位。Chino 在世界各地都有展览，包括纽约新美术馆、洛杉矶当代艺术博物馆、韩国、俄罗斯、法国和巴西。▷▷▷▷</p></a>
+      <p class="chinese">Chino Amobi Is a multimedia artists who combines art, painting, design, music, writing, and film with a rich assemblage of styles and voices.Amobi is a co-founder of the independent record label NON Worldwide and creative director of EROICA. In 2016 he released the EP Airport Music For Black Folk and in 2017 released his debut album Paradiso to critical acclaim. He received his MFA in Visual Communication at VCU.Amobi also earned a BFA in Painting and Printmaking from VCU. Chino has performed internationally including the New Museum New York, MOCA Los Angeles, South Korea, Russia, France, and Brazil. ▷▷▷▷</p></a>
     </div>
   </div>
   <div class="column">
@@ -43,11 +42,7 @@
     <a href="SorinStudio-html/index.html">
     <img src="sorin-motion.gif" style="width:100%">
       <h3>雅痞艺术+SOARIN STUDIO | 关于西装，也许你一无所知</h3>
-      <p class="chinese">复古是一种印记，不断地重现，却忘了复古的本质：是对现实的不满。
-      未来，从过去和现在中重铸。复古，从旧时代和新世纪中重塑。用复古打破复古，
-      去发现复古，去否定复古，去重构复古，
-      历史的积淀在复古中深刻，未来的创造在复古中迸发，
-      这，就是SOARIN。▷▷▷▷</p></a>
+      <p class="chinese">"Retro is a kind of mark, constantly reappearing, but forgets the essence of retro: discontent with reality.The future recast from the past and the present. Restoring ancient ways, remolding from the old times and the new century.Break the old ways with the old ways.To discover, to deny, to reconstruct.The accumulation of history is profound in restoring ancient ways, and the creation of the future is bursting out in restoring ancient ways.So that's SOARIN."▷▷▷▷</p></a>
     </div>
   </div>
   <div class="column">
@@ -55,8 +50,8 @@
       <a href="xuewu-html/index.html">
     <img src="xuewu-motion.gif" style="width:100%">
       <h3>对话禅修艺术 | 郑学武 ZHENG XUEWU</h3>
-      <p class="chinese">职业艺术家/国际艺术策展人
-       出生于黑龙江农垦建设兵团，先后修学业于哈尔滨师范大学艺术学院美术系、中央工艺美术学院装饰绘画系、纽约州立大学美术学院版画系。美国阿巴拉契亚州立大学、美国北卡罗来纳大学的客座教授;美国哥伦比亚大学、帕森斯学院、瓦萨学院及爱尔兰科克大学的访问学者。美国弗蒙特艺术中心、比利时马瑟瑞尔艺术中心和韩国光州市立美术馆的国际驻访项目艺术家。版画和装置作品参加过亚洲、欧洲、澳大利亚和美国的众多展览。重要收藏：中国美术馆、德国科勒惠支博物馆、韩国光州市立美术馆、美国阿克兰博物馆、澳大利亚驻华大使馆等。▷▷▷▷
+      <p class="chinese">Artist/International art curator.
+      Born in HeiLongJiang（黑龙江） Agricultural Reclamation Construction Corps. He studied in the Department of Fine Arts at Harbin Normal University and the Department of Printmaking at the State University of New York, School of Fine Arts. Zheng Xuewu also is a visiting professor at Appalachian State University and the University of North Carolina, USA; visiting scholar at Columbia University, Parsons, Vassar College, and Cork University in Ireland...▷▷▷▷
      </p></a>
     </div>
   </div>
@@ -65,7 +60,8 @@
     <a href="eric-html/index.html">
     <img src="Eric-motion.gif" style="width:100%">
       <h3>出生在内心的怪兽 | ERIC MILLIKIN</h3>
-      <p class="chinese">Eric Millikin是一个概念激进主义新媒体艺术家在底特律，密歇根州和里士满，弗吉尼亚州。Millikin是密歇根州立大学的第一代大学生，曾获得多项学术奖学金，包括国家优秀学生奖学金，目前他是弗吉尼亚联邦大学动态影像专业研究生在读学生。他最近在一年的时间里在20个场馆展出，他的作品在底特律、丹佛、迪拜、旧金山、苏格兰和韩国的博物馆和画廊展出。Millikin之前的工作为他带来了广泛的经验，包括作为人体解剖实验室技术员，戏剧音响和灯光设计师，工业音乐家，普利策奖获奖艺术家和艺术总监， 受害者的后裔。他的作品被《连线》、《今日美国》、《雷普利的信不信由你》等杂志登载。以及《纽约时报》周日艺术版块。▷▷▷▷</p></a>
+      <p class="chinese"> Conceptual activist new media artist based in Detroit, Michigan, and Richmond, Virginia. Millikin comes from a working-class family, growing up in a mobile home in rural Michigan, the son of a laid-off auto worker and a Denny’s waitress.
+      The activist themes of his work often seek to change the types of prejudice, fear, and exploitation he has seen in the industrial Midwest and the former capital of the Confederacy. Millikin is a first-generation college student who attended Michigan State University with multiple academic scholarships, including a National Merit Scholarship, and he is currently an MFA candidate at Virginia Commonwealth University's renowned Kinetic Imaging program.Coming out of an isolated rural area, Millikin's strategy is now to reach as wide an audience as possible in order to affect maximum social change. He has recently exhibited in 20 venues within a year’s time, and his work has been exhibited in museums and galleries from Detroit, Denver, and Dubai to San Francisco, Scotland, and South Korea... ▷▷▷▷</p></a>
     </div>
     </div>
    </div>
@@ -75,8 +71,7 @@
          <a href="shiyouzhong-html/index.html">
          <img src="shiyouzhong-cover.gif" style="width:100%">
          <h3>明暗之间看见色彩 | 施又中 SHI YOUZHONG</h3>
-         <p class="chinese">施又中，1972 年出生于台湾,毕业于中国文化大学戏剧学系。现专职艺术创作,绘画资历超过 10 年,以西画压克力彩及水彩为主要创作媒材。
-         曾参加多次台湾之联展及个展,作品亦受邀至美国纽约、韩 国、南美洲、东欧、中东地区展出。▷▷▷▷</p></a>
+         <p class="chinese">She was born in Taiwan in 1972 and graduated from the Drama Department of Chinese Culture University. She is a professional artist with over 10 years' painting experience. She is mainly engaged in acrylic and watercolor painting. ▷▷▷▷</p></a>
        </div>
      </div>
      <div class="column">
@@ -85,9 +80,19 @@
          <img src="zhengluoyu-cover.gif" style="width:100%">
          <h3>❀ 八月特刊 / Special Topic ❀<br>
            八月夏天，治愈音符 | 郑洛宇 Zheng Luoyu</h3>
-         <p class="chinese">Hello大家好，我叫郑洛宇
-        出生在音乐家庭，从小受到父亲的耳濡目染，幼儿园就开始接触小提琴，目前擅长钢琴，架子鼓，吉他，唱歌及创作。也是因为接触音乐比较早，从小就有创作的灵感，喜欢写歌。
-        我的写歌没有太大的目的性，就是单纯想用音乐，用唱歌、创作的方式来抒发当下的情绪状态。▷▷▷▷</p></a>
+         <p class="chinese"> Hello, everyone. My name is Zheng Luoyu
+          I was born in a musical family. Influenced by my father since childhood, I began to play the violin in kindergarten. At present, I am good at piano, drum set, guitar, singing and creation. It is also because of the early contact with music, I have been inspired to create since childhood, like to write songs.
+          My songwriting has no great purpose, but I simply want to use music, singing and creation to express the current emotional state. ▷▷▷▷</p></a>
+       </div>
+     </div>
+   </div>
+   <div class="row">
+     <div class="column">
+       <div class="content">
+         <a href="liulight-html/index.html">
+         <img src="liulight-motion.gif" style="width:100%">
+         <h3>与其拥抱浪漫的理想，你必须面对每一段破碎爱情的意义 | Liu Light</h3>
+         <p class="chinese">Liu Light 刘亮 is an artist, writer, and musician based in New York. They create a wide variety of interrelated work, including motion paintings, illustrations, poetry, art books, songs, and performance. Light is interested in creating a language / reality / world that they can exist in, exploring and reshaping the boundaries and grey areas between lived experience, dream, romance, body, self, and fantasy. ▷▷▷▷</p></a>
        </div>
      </div>
 
