--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
    <p><a class="about" href="about.html">关于木牙✻ABOUT</a></p>
    <p><a class="center_page" href="index.html">木牙✻MUYA</a></p>
    <p><a class="flawer" href="huayuji-html/index.html">花语集✻GARDEN</a></p>
-   <hr></div>
+   </div>
    <br>
    <div>
    <img class="titlelogo" src="MUYA logo-19.jpg">
