--- a/index.html
+++ b/index.html
@@ -90,9 +90,18 @@
      <div class="column">
        <div class="content">
          <a href="liulight-html/index.html">
-         <img src="liulight-motion.gif" style="width:80%">
+         <img src="liulight-motion.gif" style="width:70%">
          <h3>与其拥抱浪漫的理想，你必须面对每一段破碎爱情的意义 | Liu Light</h3>
          <p class="chinese">Liu Light 刘亮 is an artist, writer, and musician based in New York. They create a wide variety of interrelated work, including motion paintings, illustrations, poetry, art books, songs, and performance. Light is interested in creating a language / reality / world that they can exist in, exploring and reshaping the boundaries and grey areas between lived experience, dream, romance, body, self, and fantasy. ▷▷▷▷</p></a>
+       </div>
+     </div>
+     <div class="column">
+       <div class="content">
+         <a href="cyriakharris-html/index.html">
+         <img src="cyriak06.gif" style="width:100%">
+         <h3>动物世界怪诞频道 | Cyriak Harris
+         </h3>
+         <p class="chinese">Cyriak Harris is a British artist best known for his surreal animations using photo and video montage, which he began spreading on the internet in 2004. He has since built a career as a freelance animator, working on commercials, TV shows, and music videos, and has a YouTube following of over a million subscribers. He currently lives in Lincolnshire for no apparent reason. ▷▷▷▷</p></a>
        </div>
      </div>
 
