--- a/index.html
+++ b/index.html
@@ -104,10 +104,18 @@
          <p class="chinese">Cyriak Harris is a British artist best known for his surreal animations using photo and video montage, which he began spreading on the internet in 2004. He has since built a career as a freelance animator, working on commercials, TV shows, and music videos, and has a YouTube following of over a million subscribers. He currently lives in Lincolnshire for no apparent reason. ▷▷▷▷</p></a>
        </div>
      </div>
+   </div>
+   <div class="row">
+     <div class="column">
+       <div class="content">
+         <a href="digbi-html/index.html">
+         <img src="digbi-cover.gif" style="width:100%">
+         <h3>脑袋开了花，城市发了芽 | Digbijayee Khatua</h3>
+         <p class="chinese">Digbijayee Khatua received a Master’s degree in Fine Arts in 2015 from the College of Art, Delhi University, New Delhi, and a Bachelor’s degree in Visual Arts in 2012 from B. K. College of Art and Crafts, Bhubaneshwar, Odisha and. Most recently, He has received some Scholarships, awards, and group exhibitions in India and abroad. Research Grant Scholarship Lalit Kala Academy, Garhi Studio, New Delhi, 2015-2016. and currently based in New Delhi.▷▷▷▷</p></a>
+       </div>
+     </div>
 
-
-
-      </div>
+   </div>
 
 
 
