--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
          <p class="chinese">Digbijayee Khatua received a Master’s degree in Fine Arts in 2015 from the College of Art, Delhi University, New Delhi, and a Bachelor’s degree in Visual Arts in 2012 from B. K. College of Art and Crafts, Bhubaneshwar, Odisha and. Most recently, He has received some Scholarships, awards, and group exhibitions in India and abroad. Research Grant Scholarship Lalit Kala Academy, Garhi Studio, New Delhi, 2015-2016. and currently based in New Delhi.▷▷▷▷</p></a>
        </div>
      </div>
+     <div class="column">
+       <div class="content">
+         <a href="huayiwenxin-html/index.html">
+         <img src="huayiwenxin-motion.gif" style="width:100%">
+         <h3>尚未踏入过的世界 | 画意文心-返景 「展览&访谈」</h3>
+         <p class="chinese">Painting group exhibition in Beijing in China. The show name is "Nature-hearted in painting - Retruning nature". The painters and artists: Zhengxin Liu, Chen Ma, Shilong Wei, Chongwen Yu. ▷▷▷▷</p></a>
+       </div>
+     </div>
 
    </div>
 
