--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -44,6 +44,7 @@
      <img class="titlelogo" src="xuewu-huayu.gif">
      </div>
      </div>
+   </div>
      <div class="row">
      <div class="column">
      <div class="content">
@@ -76,7 +77,14 @@
      </div>
      </div>
   </div>
-
+  </div>
+     <div class="row">
+     <div class="column">
+     <div class="content">
+     <img class="titlelogo" src="huayuwenxin-flower.gif">
+  </div>
+</div>
+</div>
      <br><br><br><br><br>
      <p class="container">▽</p>
      <p class="container">▽</p>
