huangwei page update

--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -84,7 +84,14 @@
      <img class="titlelogo" src="huayuwenxin-flower.gif">
   </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="huangwei-huayu.gif">
 </div>
+</div>
+</div>
+
+
      <br><br><br><br><br>
      <p class="container">▽</p>
      <p class="container">▽</p>
