--- a/index.html
+++ b/index.html
@@ -122,6 +122,18 @@
          <p class="chinese">Painting group exhibition in Beijing in China. The show name is "Nature-hearted in painting - Retruning nature". The painters and artists: Zhengxin Liu, Chen Ma, Shilong Wei, Chongwen Yu. ▷▷▷▷</p></a>
        </div>
      </div>
+     <div class="column">
+       <div class="content">
+         <a href="huangwei-html/index.html">
+         <img src="huangwei10.jpg" style="width:100%">
+         <h3>在水墨渲染中寻找内心的平静 | 黄威 「艺术访谈」</h3>
+         <p class="chinese">Huang Wei<br>
+         1985, Born in Baotou, Inner Mongolia
+         2011, Graduated from The Department of Chinese Painting of Tianjin Academy of Fine Arts with a bachelor's degree
+         2014, I graduated from Art College of Xizang University with a master's degree
+         Now he lives and works in Beijing T3 International Art District.▷▷▷▷</p></a>
+       </div>
+     </div>
 
    </div>
 
