synoptic office issue update

--- a/ChinoAmobi-html/index.html
+++ b/ChinoAmobi-html/index.html
@@ -19,7 +19,7 @@
  </head>
  <body>
    <div class="leader">
-   <p><a class="about" href="../about.html">关于木牙✻ABOUT</a></p>
+   <p><a class="about" href="../about.html">联系木牙✻CONTACT</a></p>
    <p><a class="center_page" href="../index.html">木牙✻MUYA</a></p>
    <p><a class="flawer" href="../huayuji-html/index.html">花语集✻GARDEN</a></p>
    </div>
@@ -123,10 +123,10 @@
     <br>
     <div class="information">
     <p class="chinese"><a class="big">艺术家品牌及个人联系方式</a></p>
-    <p class="chinese"> <a class="link" href="https://eroica.bigcartel.com/">✤ 品牌店铺链接</a></p>
-    <p class="chinese"> <a class="link" href="http://non.com.co/">✤ 唱片公司官网</a></p>
-    <p class="chinese"> <a class="link" href="https://www.instagram.com/eroica__/">✤ 品牌INS: eroica_</a></p>
-    <p class="chinese"> <a class="link" href="https://www.instagram.com/chinoamobi/">✤ 个人INS: chinoamobi</a></p>
+    <p class="chinese"> <a class="link" href="https://eroica.bigcartel.com/" target="_blank">✤ 品牌店铺链接</a></p>
+    <p class="chinese"> <a class="link" href="http://non.com.co/" target="_blank">✤ 唱片公司官网</a></p>
+    <p class="chinese"> <a class="link" href="https://www.instagram.com/eroica__/" target="_blank">✤ 品牌INS: eroica_</a></p>
+    <p class="chinese"> <a class="link" href="https://www.instagram.com/chinoamobi/" target="_blank">✤ 个人INS: chinoamobi</a></p>
     <br>
     <img class="titlelogo" src="chino-final.jpg">
   </div>
