--- a/SorinStudio-html/index.html
+++ b/SorinStudio-html/index.html
@@ -19,7 +19,7 @@
  </head>
  <body>
    <div class="leader">
-   <p><a class="about" href="../about.html">关于木牙✻ABOUT</a></p>
+   <p><a class="about" href="../about.html">联系木牙✻CONTACT</a></p>
    <p><a class="center_page" href="../index.html">木牙✻MUYA</a></p>
    <p><a class="flawer" href="../huayuji-html/index.html">花语集✻GARDEN</a></p>
    </div>
@@ -140,9 +140,9 @@
     <br>
     <div class="information">
     <p class="chinese"><a class="big">艺术家品牌及个人联系方式</a></p>
-    <p class="chinese"> <a class="link" href="https://www.soarin-tw.net/">✤ 品牌店铺链接</a></p>
+    <p class="chinese"> <a class="link" href="https://www.soarin-tw.net/" target="_blank">✤ 品牌店铺链接</a></p>
     <p class="chinese">✤ 品牌店铺: SOARIN独立复古（Pinkoi）SOARIN独立复古原创男装（某宝）</p>
-    <p class="chinese"> <a class="link" href="https://www.instagram.com/soarin.taiwan/">✤ 品牌INS: soarin.taiwan</a></p>
+    <p class="chinese"> <a class="link" href="https://www.instagram.com/soarin.taiwan/" target="_blank">✤ 品牌INS: soarin.taiwan</a></p>
 
     <br>
     <img class="titlelogo" src="sorin-final.jpg">
