--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
  <body>
    <div class="leader">
-   <p><a class="about" href="about.html">关于木牙✻ABOUT</a></p>
+   <!-- <p><a class="about" href="about.html">联系木牙✻CONTACT</a></p> -->
    <p><a class="center_page" href="index.html">木牙✻MUYA</a></p>
    <p><a class="flawer" href="huayuji-html/index.html">花语集✻GARDEN</a></p>
    </div>
@@ -58,26 +58,24 @@
      <p class="english">In this art society which is filled with questions/puzzles and overloaded ideas, MUYA focuses on the issues that we care about most and the words that need to be addressed are entitled goals. Interact with influential, active and diverse art stars, and outstanding designers to answer questions. Art is an endless human exploration for the unknown. Our purpose is to provide support for the continuous flow of design and art explorers and groups through innovative ideas, humorous questions, unexpected answers, and rich experience, practical application and promotion of art. To respond to the group with the sound of the individual, and to respond to the individual with the quantity of the group.</p>
      <br><br>
      <p class="big">✤ 平台创办人信息 ✤</p>
-     <p class="chinese"><a href="https://beiya0916.wixsite.com/beiyayang">杨蓓雅 Beiya Yang</a><br><br>
+     <p class="chinese"><a class="link"  href="https://beiya0916.wixsite.com/beiyayang" target="_blank">杨蓓雅 Beiya Yang</a><br><br>
      杨蓓雅主要研究常见的事物。她喜欢观察生活，并把这个习惯融入了她的作品中。在弗吉尼亚联邦大学(Virginia Commonwealth University)攻读工艺和材料专业的本科学位后，她去了纽约州立大学-新帕尔兹分校（State University of New York）继续从事于金属项目的研究。<br><br>
      最近，她专注于诠释无处不在的水洗标语言。通过提取物体的内容，她创造了新的标签来表达个人对日常生活和仪式的思考。通过这样的表达方式，作品揭示了标签的内在语言，在制作过程中她邀请佩戴者考虑自身的特性、习惯和需求。<br><br>
      杨蓓雅目前就读于纽约州立大学-新帕尔兹分校，在Myra Mimlitsch-Gray和 Lynn Batchelder指导下攻读金属专业的研究生学位。作品曾在北京国际设计周，纽约珠宝周，西班牙马德里艺术珠宝周，法国慕尼黑珠宝周，法国珠宝周，雅典珠宝周，德国珠宝周，Anderson 画廊，费城国家自由博物馆，等展出。</p>
      <p class="english">Beiya Yang examines common objects. She likes to observe life, and she has brought this habit into her works. After finishing, an undergraduate degree in Craft and materials study at Virginia Commonwealth University. She went to the State University of New York -New Platz to continue her metal research project. <br><br>
     More recently, she has focused on specifically interpreting the language of ubiquitous clothing labels. By extracting their contents, she creates new labels to express personal reflections on everyday routines and rituals. As jewelry, the tags’ inner language is exposed, inviting the wearer to consider their own contents, habits, and needs. Her works are selected in exhibition at Beijing International Design Week, New York Jewelry Week, Madrid Art Jewelry Week in Spain, Munich Jewelry Week in France, French Jewelry Week, Athens Jewelry Week, German Jewelry Week, Anderson Gallery, Philadelphia National Liberty  Museum, etc.
     Beiya Yang is currently completing her graduate degree in metal.</p>
-    <p class="chinese"><a href="http://machine-art-girl.net/">刘禹桐 Yutong Liu</a><br><br>
+    <p class="chinese"><a class="link" href="http://machine-art-girl.net/" target="_blank">刘禹桐 Yutong Liu</a><br><br>
     刘禹桐，来自中国的独立平面与视觉设计师，她的作品相关于机械情感共鸣，材料性与非材料性的研究，视觉语言的应用，印刷和数字出版物的探索。她的研究生专业是设计与视觉传达在弗吉尼亚联邦大学艺术学院（2018-2020）。她的本科专业是视觉传达设计在中国鲁迅美术学院（2013-2017)。她的作品被AIGA，ADC，Number：Inc.和时报金犊奖，上海国际印刷周提名，展示和获奖。</p>
     <p class="english">Yutong Liu is an independent graphic and visual designer from China. Her work is based on machine sympathy, research on material and immaterial, visual languages using, exploration on printed and digital publication. Her MFA is Design - Visual Communication at Virginia Commonwealth University School of Fine Arts in USA (2018-2020). Her BFA is Visual Communication Design at Luxun Academy School of Fine Arts in China (2013-2017). Her works are selected or awarded by AIGA, ADC, Number:Inc., and Times Young Creative awards , Shanghai International printing week etc.</p>
     <br><br><br><br>
+
+    <p class="big">✤ CONTACT US✤</p>
+    <p class="chinese">“Be The One，我们期待那个永远年轻，热情，有趣并且独一无二的你。” 木牙MUYA平台长期收录优秀作品及概念，并最终以文字专访的形式线上发表。我们期待倾听您优秀作品。请发送给我们你的个人简历，艺术作品或个人网站。</p>
+    <p class="english">"Be The One, we look forward to The One who is always young, enthusiastic, interesting and unique." MUYA gneral open call for collecting excellent works and concepts, and finally published online in the form of a text interview. We look forward to hearing from you. Please send us your resume, artwork or personal website as a refernce. Feel free to contact us!!<p class="english">Email: muya.art@gmail.com</p>
+    <p class="english"><a class="link" href="https://www.instagram.com/muya_arts/" target="_blank">Instagram: muya_arts</a></p>
     <p class="big">木牙微信订阅号</p>
     <img class="code" src="muya-qr.jpg">
-    <p class="big">✤ OPEN CALL ✤</p>
-    <p class="chinese">“Be The One，我们期待那个永远年轻，热情，有趣并且独一无二的你。”</p>
-    <p class="chinese">如果有意愿，可以联系我们，期待倾听您的创作经历和有趣的故事。</p>
-    <p class="english">We're collecting and listening to artists who want to share their art practices story!<br>
-    It is our privilege to share with some of the most exciting contemporary artists, designers, and creatives an insight into their methods and processes to share them with those who need them as well. <br>
-    If you feel interested, you can email and contact us. We appreciate your supporting and participation.</p>
-    <p class="english">✫ Feel free to email us your concept and CV or just say Hi ✫</p> <p class="english">muya.art@gmail.com</p>
   </div>
   </body>
 
