--- a/cyriakharris-html/index.html
+++ b/cyriakharris-html/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <div class="leader">
-  <p><a class="about" href="../about.html">关于木牙✻ABOUT</a></p>
+  <p><a class="about" href="../about.html">联系木牙✻CONTACT</a></p>
   <p><a class="center_page" href="../index.html">木牙✻MUYA</a></p>
   <p><a class="flawer" href="../huayuji-html/index.html">花语集✻GARDEN</a></p>
   </div>
@@ -132,9 +132,9 @@
     <img class="titlelogo" src="cyriak-huayu.gif">
     <div class="information">
     <p class="chinese"><a class="big">艺术家个人联系方式</a></p>
-    <p class="english"> <a class="link" href="http://cyriak.co.uk/animation/">✤ 艺术家网站（Artist Website)</a></p>
-    <p class="english"> <a class="link" href="https://www.instagram.com/cyriak_h/">✤ 个人INS(instagram): cyriak_h</a></p>
-    <p class="english"> <a class="link" href="https://www.youtube.com/user/cyriak">✤ YouTube: cyriak</a></p>
+    <p class="english"> <a class="link" href="http://cyriak.co.uk/animation/" target="_blank">✤ 艺术家网站（Artist Website)</a></p>
+    <p class="english"> <a class="link" href="https://www.instagram.com/cyriak_h/" target="_blank">✤ 个人INS(instagram): cyriak_h</a></p>
+    <p class="english"> <a class="link" href="https://www.youtube.com/user/cyriak" target="_blank">✤ YouTube: cyriak</a></p>
     <br>
     <img class="titlelogo" src="cyriak-final.jpg">
   </div>
