--- a/eric-html/index.html
+++ b/eric-html/index.html
@@ -20,7 +20,7 @@
  </head>
  <body>
    <div class="leader">
-   <p><a class="about" href="../about.html">关于木牙✻ABOUT</a></p>
+   <p><a class="about" href="../about.html">联系木牙✻CONTACT</a></p>
    <p><a class="center_page" href="../index.html">木牙✻MUYA</a></p>
    <p><a class="flawer" href="../huayuji-html/index.html">花语集✻GARDEN</a></p>
    </div>
@@ -39,13 +39,13 @@
      <br><br>
      <img class="titlelogo" src="eric02.jpg">
      <br>
-     <p class="chinese"><a class="big">Eric Millikin</a><br>概念激进主义新媒体艺术家在底特律，密歇根州和里士满，弗吉尼亚州。Millikin 出生在一个工人阶级家庭，在密歇根乡下的一所<a href="https://baike.baidu.com/item/%E7%A7%BB%E5%8A%A8%E6%88%BF%E5%B1%8B">移动房屋</a>中长大，父亲是下岗的汽车工人，母亲是Denny’s餐厅的女服务员。</p>
+     <p class="chinese"><a class="big">Eric Millikin</a><br>概念激进主义新媒体艺术家在底特律，密歇根州和里士满，弗吉尼亚州。Millikin 出生在一个工人阶级家庭，在密歇根乡下的一所<a class="link" href="https://baike.baidu.com/item/%E7%A7%BB%E5%8A%A8%E6%88%BF%E5%B1%8B">移动房屋</a>中长大，父亲是下岗的汽车工人，母亲是Denny’s餐厅的女服务员。</p>
     <p class="chinese">他作品中的激进主义主题经常试图改变他在工业发达的中西部地区和前南部邦联首府看到的偏见、恐惧和剥削。Millikin 是密歇根州立大学的第一代大学生，曾获得多项学术奖学金，包括国家优秀学生奖学金，目前他是弗吉尼亚联邦大学动态影像专业研究生在读学生。</p>
-     <p class="chinese">Millikin 来自一个偏远的农村地区，现在的策略是接触尽可能广泛的受众，以最大限度地影响社会变化。他最近在一年的时间里在20个场馆展出，他的作品在底特律、丹佛、迪拜、旧金山、苏格兰和韩国的博物馆和画廊展出。Millikin之前的工作为他带来了广泛的经验，包括作为人体解剖实验室技术员，戏剧音响和灯光设计师，工业音乐家，普利策奖获奖艺术家和艺术总监， <a href="https://zh.wikipedia.org/wiki/%E5%A1%9E%E5%8B%92%E5%A7%86%E5%AE%A1%E5%B7%AB%E6%A1%88">萨勒姆女巫审判受害者的后裔。</a>他的作品被《连线》、《今日美国》、《雷普利的信不信由你》等杂志登载。以及《纽约时报》周日艺术版块。</p>
+     <p class="chinese">Millikin 来自一个偏远的农村地区，现在的策略是接触尽可能广泛的受众，以最大限度地影响社会变化。他最近在一年的时间里在20个场馆展出，他的作品在底特律、丹佛、迪拜、旧金山、苏格兰和韩国的博物馆和画廊展出。Millikin之前的工作为他带来了广泛的经验，包括作为人体解剖实验室技术员，戏剧音响和灯光设计师，工业音乐家，普利策奖获奖艺术家和艺术总监， <a class="link" href="https://zh.wikipedia.org/wiki/%E5%A1%9E%E5%8B%92%E5%A7%86%E5%AE%A1%E5%B7%AB%E6%A1%88">萨勒姆女巫审判受害者的后裔。</a>他的作品被《连线》、《今日美国》、《雷普利的信不信由你》等杂志登载。以及《纽约时报》周日艺术版块。</p>
       <p class="english"><a class="big">Eric Millikin</a><br>
-    conceptual activist new media artist based in Detroit, Michigan, and Richmond, Virginia. Millikin comes from a working-class family, growing up in a <a href="https://en.wikipedia.org/wiki/Mobile_home">mobile home</a> in rural Michigan, the son of a laid-off auto worker and a Denny’s waitress. </p>
+    conceptual activist new media artist based in Detroit, Michigan, and Richmond, Virginia. Millikin comes from a working-class family, growing up in a <a class="link" href="https://en.wikipedia.org/wiki/Mobile_home">mobile home</a> in rural Michigan, the son of a laid-off auto worker and a Denny’s waitress. </p>
     <p class="english">The activist themes of his work often seek to change the types of prejudice, fear, and exploitation he has seen in the industrial Midwest and the former capital of the Confederacy. Millikin is a first-generation college student who attended Michigan State University with multiple academic scholarships, including a National Merit Scholarship, and he is currently an MFA candidate at Virginia Commonwealth University's renowned Kinetic Imaging program. </p>
-    <p class="english">Coming out of an isolated rural area, Millikin's strategy is now to reach as wide an audience as possible in order to affect maximum social change. He has recently exhibited in 20 venues within a year’s time, and his work has been exhibited in museums and galleries from Detroit, Denver, and Dubai to San Francisco, Scotland, and South Korea. Millikin brings a wide range of experiences to his work, including as a human anatomy lab technician, theatrical sound and lighting designer, industrial musician, Pulitzer Prize-winning artist and art director, and descendant of <a href="https://en.wikipedia.org/wiki/Salem_witch_trials">Salem Witch Trial victims</a>. His artwork has been featured by WIRED, USA TODAY, Ripley's Believe It or Not!, and The New York Times Sunday Arts section. </p>
+    <p class="english">Coming out of an isolated rural area, Millikin's strategy is now to reach as wide an audience as possible in order to affect maximum social change. He has recently exhibited in 20 venues within a year’s time, and his work has been exhibited in museums and galleries from Detroit, Denver, and Dubai to San Francisco, Scotland, and South Korea. Millikin brings a wide range of experiences to his work, including as a human anatomy lab technician, theatrical sound and lighting designer, industrial musician, Pulitzer Prize-winning artist and art director, and descendant of <a class="link" href="https://en.wikipedia.org/wiki/Salem_witch_trials" target="_blank">Salem Witch Trial victims</a>. His artwork has been featured by WIRED, USA TODAY, Ripley's Believe It or Not!, and The New York Times Sunday Arts section. </p>
      <br><br>
      <img class="titlelogo" src="eric03.gif">
      <br><br>
@@ -55,10 +55,10 @@
      <br><br>
      <img class="titlelogo" src="chuangzuochuzhong.gif">
      <br>
-     <p class="chinese">“我是一个激进主义概念新媒体艺术家,利用人工智能技术,互动视频投影,<a href="https://baike.baidu.com/item/%E5%A2%9E%E5%BC%BA%E7%8E%B0%E5%AE%9E#:~:text=%E5%A2%9E%E5%BC%BA%E7%8E%B0%E5%AE%9E(Augmented%20Reality)%E6%8A%80%E6%9C%AF,%E7%9C%9F%E5%AE%9E%E4%B8%96%E7%95%8C%E7%9A%84%E2%80%9C%E5%A2%9E%E5%BC%BA%E2%80%9D%E3%80%82">增强现实（专有术语）</a>和虚拟现实,植物组织培养与克隆, 3D印刷、声音艺术、现代神秘主义艺术学中的神秘学实验和黑色幽默来解释我的研究主题，例如：警察暴力,经济不平等,物种灭绝,全球COVID-19大流行。”
+     <p class="chinese">“我是一个激进主义概念新媒体艺术家,利用人工智能技术,互动视频投影,<a class="link" href="https://baike.baidu.com/item/%E5%A2%9E%E5%BC%BA%E7%8E%B0%E5%AE%9E#:~:text=%E5%A2%9E%E5%BC%BA%E7%8E%B0%E5%AE%9E(Augmented%20Reality)%E6%8A%80%E6%9C%AF,%E7%9C%9F%E5%AE%9E%E4%B8%96%E7%95%8C%E7%9A%84%E2%80%9C%E5%A2%9E%E5%BC%BA%E2%80%9D%E3%80%82" target="_blank">增强现实（专有术语）</a>和虚拟现实,植物组织培养与克隆, 3D印刷、声音艺术、现代神秘主义艺术学中的神秘学实验和黑色幽默来解释我的研究主题，例如：警察暴力,经济不平等,物种灭绝,全球COVID-19大流行。”
      <p class="english">✤<a class="big"> 科普：现代神秘主义艺术学 -Modernism and Magic</a>: Experiments with Spiritualism, Theosophy and the Occult<br>现代主义和魔术：艺术学，精神主义，神学和神秘学的艺术实验与研究</p>
      <p class="english">
-       “I am a conceptual activist new media artist, using techniques like artificial intelligence, interactive video projection, augmented and <a href="https://en.wikipedia.org/wiki/Virtual_reality">virtual reality</a>, vegetative tissue culture cloning, 3D printing, sound art, occult experiments, and dark humor to address my research into topics like police brutality, economic injustice, species extinction, and the global COVID-19 pandemic.”</p>
+       “I am a conceptual activist new media artist, using techniques like artificial intelligence, interactive video projection, augmented and <a class="link" href="https://en.wikipedia.org/wiki/Virtual_reality" target="_blank">virtual reality</a>, vegetative tissue culture cloning, 3D printing, sound art, occult experiments, and dark humor to address my research into topics like police brutality, economic injustice, species extinction, and the global COVID-19 pandemic.”</p>
     <br><br>
     <img class="titlelogo" src="eric06.jpg">
     <br>
@@ -136,8 +136,8 @@
     <img class="titlelogo" src="eric-huayu.gif">
     <div class="information">
     <p class="chinese"><a class="big">艺术家个人联系方式</a></p>
-    <p class="english"> <a class="link" href="https://ericmillikin.com/">✤ 艺术家网站（Artist Website)</a></p>
-    <p class="english"> <a class="link" href="https://www.instagram.com/ericmillikin/">✤ 个人INS(instagram): ericmillikin</a></p>
+    <p class="english"> <a class="link" href="https://ericmillikin.com/" target="_blank">✤ 艺术家网站（Artist Website)</a></p>
+    <p class="english"> <a class="link" href="https://www.instagram.com/ericmillikin/" target="_blank">✤ 个人INS(instagram): ericmillikin</a></p>
     <br>
     <img class="titlelogo" src="eric-final.jpg">
   </div>
