--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  </head>
  <body>
    <div class="leader">
-   <p><a class="about" href="about.html">关于木牙✻ABOUT</a></p>
+   <p><a class="about" href="about.html">联系木牙✻CONTACT</a></p>
    <p><a class="center_page" href="index.html">木牙✻MUYA</a></p>
    <p><a class="flawer" href="huayuji-html/index.html">花语集✻GARDEN</a></p>
    </div>
@@ -122,6 +122,8 @@
          <p class="chinese">Painting group exhibition in Beijing in China. The show name is "Nature-hearted in painting - Retruning nature". The painters and artists: Zhengxin Liu, Chen Ma, Shilong Wei, Chongwen Yu. ▷▷▷▷</p></a>
        </div>
      </div>
+   </div>
+     <div class="row">
      <div class="column">
        <div class="content">
          <a href="huangwei-html/index.html">
@@ -132,6 +134,15 @@
          2011, Graduated from The Department of Chinese Painting of Tianjin Academy of Fine Arts with a bachelor's degree
          2014, I graduated from Art College of Xizang University with a master's degree
          Now he lives and works in Beijing T3 International Art District.▷▷▷▷</p></a>
+       </div>
+     </div>
+     <div class="column">
+       <div class="content">
+         <a href="synopticoffice-html/index.html">
+         <img src="synopticoffice-cover.gif" style="width:100%">
+         <h3>跨文化下的字体设计 | Synoptic Office 「艺术访谈」</h3>
+         <p class="chinese">Caspar Lam & YuJune Park<br>
+           Synoptic Office is a multidisciplinary design studio operating in the space between design, technology, and education. The studio’s work has been exhibited internationally and recognized by Fast Company  Design, AIGA Eye on Design, iDn, Neshan, Etapes, and It’s Nice That. ▷▷▷▷</p></a>
        </div>
      </div>
 
