--- a/liulight-html/index.html
+++ b/liulight-html/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
   <div class="leader">
-  <p><a class="about" href="../about.html">关于木牙✻ABOUT</a></p>
+  <p><a class="about" href="../about.html">联系木牙✻CONTACT</a></p>
   <p><a class="center_page" href="../index.html">木牙✻MUYA</a></p>
   <p><a class="flawer" href="../huayuji-html/index.html">花语集✻GARDEN</a></p>
   </div>
@@ -132,8 +132,8 @@
     <br><br><br>
     <div class="information">
     <p class="chinese"><a class="big">艺术家个人联系方式</a></p>
-    <p class="english"> <a class="link" href="https://liulight.com/">✤ 艺术家网站（Artist Website)</a></p>
-    <p class="english"> <a class="link" href="https://www.instagram.com/liu.light/?hl=en">✤ 个人INS(instagram): liu.light</a></p>
+    <p class="english"> <a class="link" href="https://liulight.com/" target="_blank">✤ 艺术家网站（Artist Website)</a></p>
+    <p class="english"> <a class="link" href="https://www.instagram.com/liu.light/?hl=en" target="_blank">✤ 个人INS(instagram): liu.light</a></p>
     <br>
     <img class="titlelogo" src="liulight-final.jpg">
   </div>
