--- a/zhengluoyu-html/index.html
+++ b/zhengluoyu-html/index.html
@@ -19,7 +19,7 @@
  </head>
  <body>
    <div class="leader">
-   <p><a class="about" href="../about.html">关于木牙✻ABOUT</a></p>
+   <p><a class="about" href="../about.html">联系木牙✻CONTACT</a></p>
    <p><a class="center_page" href="../index.html">木牙✻MUYA</a></p>
    <p><a class="flawer" href="../huayuji-html/index.html">花语集✻GARDEN</a></p>
    </div>
@@ -166,8 +166,8 @@
     <div class="information">
     <p class="chinese"><a class="big">音乐人个人联系方式</a></p>
     <p>✤ 邮箱 | Email: 381646778@qq.com </p>
-    <p class="english"> <a class="link" href="https://weibo.com/zhengluoyu/">✤ 洛宇的微博</a></p>
-    <p class="english"> <a class="link" href="https://www.instagram.com/zhengluoyu/">✤ 个人INS(instagram): zhengluoyu</a></p>
+    <p class="english"> <a class="link" href="https://weibo.com/zhengluoyu/" target="_blank">✤ 洛宇的微博</a></p>
+    <p class="english"> <a class="link" href="https://www.instagram.com/zhengluoyu/" target="_blank">✤ 个人INS(instagram): zhengluoyu</a></p>
     <br>
     <img class="titlelogo" src="zhengluoyu-final.jpg">
   </div>
