--- a/digbi-html/index.html
+++ b/digbi-html/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
   <div class="leader">
-  <p><a class="about" href="../about.html">关于木牙✻ABOUT</a></p>
+  <p><a class="about" href="../about.html">联系木牙✻CONTACT</a></p>
   <p><a class="center_page" href="../index.html">木牙✻MUYA</a></p>
   <p><a class="flawer" href="../huayuji-html/index.html">花语集✻GARDEN</a></p>
   </div>
@@ -146,8 +146,8 @@
     <br><br><br>
     <div class="information">
     <p class="chinese"><a class="big">艺术家个人联系方式</a></p>
-    <p class="english"> <a class="link" href="https://digbijayeekhatua.wordpress.com/">✤ 艺术家网站（Artist Website)</a></p>
-    <p class="english"> <a class="link" href="https://www.instagram.com/digbijayee_khatua/">✤ 个人INS(instagram): digbijayee_khatua</a></p>
+    <p class="english"> <a class="link" href="https://digbijayeekhatua.wordpress.com/" target="_blank">✤ 艺术家网站（Artist Website)</a></p>
+    <p class="english"> <a class="link" href="https://www.instagram.com/digbijayee_khatua/" target="_blank">✤ 个人INS(instagram): digbijayee_khatua</a></p>
     <p class="english">✤ 工作室（Studio):Studio Practice</p>
     <br>
     <img class="titlelogo" src="digbi-final.jpg">
