--- a/huangwei-html/index.html
+++ b/huangwei-html/index.html
@@ -19,7 +19,7 @@ gtag('config', 'G-P2726CSWT4');
   </head>
   <body>
   <div class="leader">
-  <p><a class="about" href="../about.html">关于木牙✻ABOUT</a></p>
+  <p><a class="about" href="../about.html">联系木牙✻CONTACT</a></p>
   <p><a class="center_page" href="../index.html">木牙✻MUYA</a></p>
   <p><a class="flawer" href="../huayuji-html/index.html">花语集✻GARDEN</a></p>
   </div>
@@ -144,6 +144,8 @@ gtag('config', 'G-P2726CSWT4');
     <p class="chinese">“无量无边，不可思议”</p>
     <br><br>
     <img class="titlelogo" src="huangwei22.jpg">
+    <br><br>
+    <img class="titlelogo" src="huangwei-huayu.gif">
     <br><br><br>
     <div class="information">
     <p class="chinese"><a class="big">艺术家个人联系方式</a></p>
