--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -19,7 +19,7 @@
  </head>
  <body>
    <div class="leader">
-   <p><a class="about" href="../about.html">关于木牙✻ABOUT</a></p>
+   <p><a class="about" href="../about.html">联系木牙✻CONTACT</a></p>
    <p><a class="center_page" href="../index.html">木牙✻MUYA</a></p>
    <p><a class="flawer" href="../huayuji-html/index.html">花语集✻GARDEN</a></p>
    </div>
@@ -87,6 +87,11 @@
 <div class="column">
 <div class="content">
 <img class="titlelogo" src="huangwei-huayu.gif">
+</div>
+</div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="synoptic-office-flower.gif">
 </div>
 </div>
 </div>
