--- a/shiyouzhong-html/index.html
+++ b/shiyouzhong-html/index.html
@@ -19,7 +19,7 @@
  </head>
  <body>
    <div class="leader">
-   <p><a class="about" href="../about.html">关于木牙✻ABOUT</a></p>
+   <p><a class="about" href="../about.html">联系木牙✻CONTACT</a></p>
    <p><a class="center_page" href="../index.html">木牙✻MUYA</a></p>
    <p><a class="flawer" href="../huayuji-html/index.html">花语集✻GARDEN</a></p>
    </div>
@@ -145,8 +145,8 @@
     <div class="information">
     <p class="chinese"><a class="big">艺术家个人联系方式</a></p>
     <p>✤ 邮箱 | Email: cat2791@gmail.com </p>
-    <p class="english"> <a class="link" href="http://www.flickr.com/photos/emilyshih/">✤ 艺术家网站（Artist Website)</a></p>
-    <p class="english"> <a class="link" href="http://www.instagram.com/cat2791">✤ 个人INS(instagram): cat2791</a></p>
+    <p class="english"> <a class="link" href="http://www.flickr.com/photos/emilyshih/" target="_blank">✤ 艺术家网站（Artist Website)</a></p>
+    <p class="english"> <a class="link" href="http://www.instagram.com/cat2791" target="_blank">✤ 个人INS(instagram): cat2791</a></p>
     <br>
     <img class="titlelogo" src="shiyouzhong-final.jpg">
   </div>
