--- a/xuewu-html/index.html
+++ b/xuewu-html/index.html
@@ -19,7 +19,7 @@
  </head>
  <body>
    <div class="leader">
-   <p><a class="about" href="../about.html">关于木牙✻ABOUT</a></p>
+   <p><a class="about" href="../about.html">联系木牙✻CONTACT</a></p>
    <p><a class="center_page" href="../index.html">木牙✻MUYA</a></p>
    <p><a class="flawer" href="../huayuji-html/index.html">花语集✻GARDEN</a></p>
    </div>
@@ -155,8 +155,8 @@
     <img class="titlelogo" src="xuewu-huayu.gif">
     <div class="information">
     <p class="chinese"><a class="big">艺术家个人联系方式</a></p>
-    <p class="chinese"> <a class="link" href="https://www.zhengxuewuart.com/">✤ 艺术家网站（Artist Website)</a></p>
-    <p class="chinese"> <a class="link" href="https://www.instagram.com/xuewu_zheng/">✤ 个人INS(instagram): xuewu_zheng</a></p>
+    <p class="chinese"> <a class="link" href="https://www.zhengxuewuart.com/" target="_blank">✤ 艺术家网站（Artist Website)</a></p>
+    <p class="chinese"> <a class="link" href="https://www.instagram.com/xuewu_zheng/" target="_blank">✤ 个人INS(instagram): xuewu_zheng</a></p>
     <br>
     <img class="titlelogo" src="xuewu-final.jpg">
   </div>
