Ava Roth article update

--- a/huayuji-html/index.html
+++ b/huayuji-html/index.html
@@ -94,6 +94,11 @@
 <img class="titlelogo" src="synoptic-office-flower.gif">
 </div>
 </div>
+<div class="column">
+<div class="content">
+<img class="titlelogo" src="avaroth-flower.gif">
+</div>
+</div>
 </div>
 
 
