--- a/synopticoffice-html/index.html
+++ b/synopticoffice-html/index.html
@@ -38,7 +38,7 @@ gtag('config', 'G-P2726CSWT4');
     <p class="english">我们有幸邀请到了Synoptic Office来到木牙MUYA。和大家一起讨论和分享，他们工作室对于文字设计的理解和感悟。</p>
     <p class="english">Writing occupies an important position in human society at the beginning. With the appearance of characters, different materials as carriers of characters also appeared, turtle shells (oracle bone inscriptions), stone (rock walls), wood, bamboo slips, paper, cloth, metal (bronzes), sand (earth), human bodies (tattoos)... And so on, until the emergence of the Internet, the transmission cost is reduced, text began to go electronic.</p>
     <p class="english">While the efficiency of text digitization has been enhanced exponentially, the progress of technology has been accompanied by the emergence of new occupations or more work content. Text/font design is what we're going to focus on today. With the beginning of the era of small video, more and more countries are going international. As a purchasing power of China, Chinese characters have also been widely disseminated. Chinese character/font design has also begun to diversify. One of the most obvious is that the design of Chinese characters is no longer the sole preserve of Chinese designers.</p>
-    <p class="english">We have the great opportunity to welcome the Synoptic Office to MUYA, which is often called MUYA. Discuss and share with you their studio's understanding and perception of typography.</p>
+    <p class="english">We have the great opportunity to welcome the Synoptic Office to MUYA. Discuss and share with you their studio's understanding and perception of typography.</p>
     <br><br>
     <img class="huayiwenxin" src="synopticoffice01.jpg">
     <br>
